[package]
name = "helixdb"
version = "0.1.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
protos = { path = "protos" }
flatbuffers = "0.7.0"
io-uring = "0.5.0"
tokio = { version = "1.4", features = ["full"] }
# glommio = "0.3"
glommio = { git = "https://github.com/DataDog/glommio.git", rev = "271d485e3cc5c6118bcb31808e9d31620a54639c" }
async-trait = "0.1.48"
lru = "0.6"
futures-util = "0.3"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.2"
