[package]
name = "db_bench"
version = "0.1.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helixdb = { path = "../" }
tokio = { version = "1.4", features = ["full"] }
indicatif = "0.15.0"
clap = "2.33"
procfs = "0.9.1"
pprof = { version = "0.4.3", features = ["flamegraph"] }
tracing-subscriber = "0.2.18"
tracing = "0.1.26"
rand = { version = "0.8", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "entry_codec"
path = "microbenches/entry_codec.rs"
harness = false
